--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -2,14 +2,14 @@ version: '3'
 
 services:
   app:
-    container_name: {{ openhabcloud_identifier }}
-    user: {{ openhabcloud_uid }}:{{ openhabcloud_gid }}
+    container_name: {{ openhab_cloud_identifier }}
+    user: {{ openhab_cloud_uid }}:{{ openhab_cloud_gid }}
     build:
       context: ../..
     volumes:
-      - ./config.json:/opt/openhabcloud/config.json
+      - {{ openhab_cloud_config_path }}/config.json:/opt/openhabcloud/config.json:readonly
     tmpfs:
-      - /opt/openhabcloud/logs:uid={{ openhabcloud_uid }},gid={{ openhabcloud_gid }}
+      - /opt/openhabcloud/logs:uid={{ openhab_cloud_uid }},gid={{ openhab_cloud_gid }}
     depends_on:
       - mongodb
       - redis
@@ -34,5 +34,5 @@ volumes:
 
 networks:
   default:
-    name: {{ openhabcloud_container_network }}
+    name: {{ openhab_cloud_container_network }}
     external: true
