--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -18,7 +18,7 @@ services:
       - NODE_ENV=production 
 
   mongodb:
-    image: mongo:4
+    image: bitnami/mongodb:latest
     volumes:
       - mongo-data:/data/db
     restart: always
